--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Ifunanya Ikemma Blockchain Journey"
+title: "My blockchain journal"
 author: "Ifunanya Ikemma"
 description: "Here is where I document all my blockchain journey." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
@@ -7,7 +7,7 @@ description: "Here is where I document all my blockchain journey." # This will s
 # email: "example@mail.com"
 twitter_username: "iphytech"
 github_username: "Iphytech"
-linkedin_username: "ifunanya ikemma"
+linkedin_username: "ifunanya-ikemma-75698490"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
