--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Here is where I document all my blockchain journey." # This will s
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-# email: "example@mail.com"
+#email: "example@mail.com"
 twitter_username: "iphytech"
 github_username: "Iphytech"
 linkedin_username: "ifunanya-ikemma-75698490"
@@ -20,7 +20,7 @@ linkedin_username: "ifunanya-ikemma-75698490"
 #########################################################################################
 theme: "minima"
 
-rss: rss
+#rss: rss
 
 kramdown:
   syntax_highlighter_opts:
